Made better looking pages for the menu.

--- a/coffee.html
+++ b/coffee.html
@@ -179,7 +179,7 @@
 </main>
 
 <footer>
-    &copy; 2025 Your Bar Name. Enjoy responsibly!
+    &copy; 2025 OK SPORT Bar Digital Menu. Enjoy responsibly!
 </footer>
 </body>
 </html>
