--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
         </a>
       </li>
       <li>
-        <a href="snacks.html">
-          <span class="icon">🍟</span>
-          Snacks
+        <a href="coffee.html">
+          <span class="icon">☕</span>
+          Coffee
         </a>
       </li>
       <li>
-        <a href="desserts.html">
-          <span class="icon">🍰</span>
-          Desserts
+        <a href="snacks.html">
+          <span class="icon">🍟</span>
+          Snacks
         </a>
       </li>
     </ul>
@@ -140,7 +140,7 @@
 </main>
 
 <footer>
-  &copy; 2025 Your Bar Name. Enjoy responsibly!
+  &copy; 2025 OK SPORT Bar Digital Menu. Enjoy responsibly!
 </footer>
 </body>
 </html>
