--- a/beer.html
+++ b/beer.html
@@ -155,7 +155,7 @@
 </main>
 
 <footer>
-  &copy; 2025 Your Bar Name. Enjoy responsibly!
+  &copy; 2025 OK SPORT Bar Digital Menu. Enjoy responsibly!
 </footer>
 </body>
 </html>
