--- a/index.html
+++ b/index.html
@@ -4,137 +4,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bar Menu</title>
+
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-
-  <style>
-    :root {
-      --bg: #121212;
-      --fg: #f0f0f0;
-      --accent: #e91e63;
-      --accent-dark: #b0003a;
-      --radius: 0.5rem;
-      --gap: 1rem;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: var(--bg);
-      color: var(--fg);
-      line-height: 1.4;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-
-    header {
-      background: var(--accent);
-      padding: 1rem var(--gap);
-      text-align: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.5);
-    }
-    header h1 {
-      font-size: 1.75rem;
-      font-weight: 600;
-    }
-
-    main {
-      flex: 1;
-      padding: var(--gap);
-    }
-
-    .intro {
-      text-align: center;
-      margin-bottom: 2rem;
-      font-size: 1rem;
-      opacity: 0.9;
-    }
-
-    nav .menu {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-      gap: var(--gap);
-      list-style: none;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-    nav .menu li a {
-      display: block;
-      background: rgba(255,255,255,0.05);
-      color: var(--fg);
-      text-decoration: none;
-      padding: 1rem;
-      border-radius: var(--radius);
-      font-weight: 500;
-      text-align: center;
-      transition: background 0.3s, transform 0.2s;
-    }
-    nav .menu li a .icon {
-      display: block;
-      font-size: 1.5rem;
-      margin-bottom: 0.25rem;
-    }
-    nav .menu li a:hover,
-    nav .menu li a:focus {
-      background: var(--accent);
-      transform: translateY(-2px);
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.85rem;
-      opacity: 0.6;
-    }
-  </style>
+  <!-- YOUR EXTERNAL CSS -->
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 <header>
   <h1>🍹 Bar Menu</h1>
+  <button id="themeToggle" aria-label="Toggle theme">🌞</button>
 </header>
 
 <main>
   <p class="intro">Scan the QR on your table, then tap a category below to explore our offerings.</p>
+  <input type="search" id="menuSearch" placeholder="🔍 Search menu…" />
 
   <nav>
     <ul class="menu">
-      <li>
-        <a href="alcohol.html">
-          <span class="icon">🍸</span>
-          Alcohol
-        </a>
-      </li>
-      <li>
-        <a href="beer.html">
-          <span class="icon">🍺</span>
-          Beer
-        </a>
-      </li>
-      <li>
-        <a href="beverages.html">
-          <span class="icon">🥤</span>
-          Beverages
-        </a>
-      </li>
-      <li>
-        <a href="coffee.html">
-          <span class="icon">☕</span>
-          Coffee
-        </a>
-      </li>
-      <li>
-        <a href="snacks.html">
-          <span class="icon">🍟</span>
-          Snacks
-        </a>
-      </li>
+      <li><a href="alcohol.html"><span class="icon">🍸</span>Alcohol</a></li>
+      <li><a href="beer.html"><span class="icon">🍺</span>Beer</a></li>
+      <li><a href="beverages.html"><span class="icon">🥤</span>Beverages</a></li>
+      <li><a href="coffee.html"><span class="icon">☕</span>Coffee</a></li>
+      <li><a href="snacks.html"><span class="icon">🍟</span>Snacks</a></li>
     </ul>
   </nav>
 </main>
@@ -142,5 +34,22 @@
 <footer>
   &copy; 2025 OK SPORT Bar Digital Menu. Enjoy responsibly!
 </footer>
+
+<script>
+  // Dark / Light toggle
+  const themeToggle = document.getElementById('themeToggle');
+  themeToggle.addEventListener('click', () => {
+    document.documentElement.classList.toggle('light');
+    themeToggle.textContent = document.documentElement.classList.contains('light') ? '🌙' : '🌞';
+  });
+
+  // Live search / filter
+  document.getElementById('menuSearch').addEventListener('input', e => {
+    const term = e.target.value.toLowerCase();
+    document.querySelectorAll('.menu li').forEach(li => {
+      li.style.display = li.textContent.toLowerCase().includes(term) ? 'block' : 'none';
+    });
+  });
+</script>
 </body>
 </html>
