Added better styling of the pages.

--- a/snacks.html
+++ b/snacks.html
@@ -11,11 +11,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<!-- Splash screen -->
+<div id="splash-screen">
+  <div class="splash-text" style="font-size: 8em">🍟</div>
+</div>
 <header>
   <!-- Language toggle (left) -->
   <button id="langToggle" class="toggle-btn" aria-label="Toggle language">EN</button>
+  <h1 data-i18n-key=""> 🍟 </h1>
   <!-- Centered title -->
-  <h1 data-i18n-key="snacks">🍟 Snacks</h1>
+  <h1 data-i18n-key="snacks">Snacks</h1>
   <!-- Theme toggle (right) -->
   <button id="themeToggle" class="toggle-btn" aria-label="Toggle theme">🌞</button>
 </header>
