--- a/beer.html
+++ b/beer.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<!-- Splash screen -->
+<div id="splash-screen">
+  <div class="splash-text" style="font-size: 8em">🍺</div>
+</div>
 <header>
   <!-- Language toggle -->
   <button id="langToggle" class="toggle-btn" aria-label="Toggle language">EN</button>
