--- a/index.html
+++ b/index.html
@@ -1,74 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bar Menu</title>
-
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <!-- YOUR EXTERNAL CSS -->
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Bar Menu</title>
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <!-- YOUR EXTERNAL CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<!-- Splash screen -->
+<div id="splash-screen">
+    <div class="splash-text" data-i18n-key="menuTitle" style="font-size: 3em">🍹 Bar Menu</div>
+</div>
 <header>
-  <!-- Language toggle on left -->
-  <button id="langToggle" class="toggle-btn" aria-label="Toggle language">EN</button>
+    <!-- Language toggle on left -->
+    <button id="langToggle" class="toggle-btn" aria-label="Toggle language">EN</button>
 
-  <!-- Centered title -->
-  <h1 data-i18n-key="menuTitle">🍹 Bar Menu</h1>
+    <!-- Centered title -->
+    <h1 data-i18n-key="menuTitle">🍹 Bar Menu</h1>
 
-  <!-- Theme toggle on right -->
-  <button id="themeToggle" class="toggle-btn" aria-label="Toggle theme">🌞</button>
+    <!-- Theme toggle on right -->
+    <button id="themeToggle" class="toggle-btn" aria-label="Toggle theme">🌞</button>
 </header>
 
 <main>
-  <p class="intro" data-i18n-key="intro">
-    Scan the QR on your table, then tap a category below to explore our offerings.
-  </p>
+    <p class="intro" data-i18n-key="intro">
+        Scan the QR on your table, then tap a category below to explore our offerings.
+    </p>
 
-  <!-- search input with i18n key -->
-  <input
-          type="search"
-          id="menuSearch"
-          data-i18n-key="searchPlaceholder"
-          placeholder="🔍 Search menu…"
-  />
+    <!-- search input with i18n key -->
+    <input
+            type="search"
+            id="menuSearch"
+            data-i18n-key="searchPlaceholder"
+            placeholder="🔍 Search menu…"
+    />
 
-  <nav>
-    <ul class="menu">
-      <li>
-        <a href="alcohol.html">
-          <span class="icon">🍸</span>
-          <span data-i18n-key="alcohol">Alcohol</span>
-        </a>
-      </li>
-      <li>
-        <a href="beer.html">
-          <span class="icon">🍺</span>
-          <span data-i18n-key="beer">Beer</span>
-        </a>
-      </li>
-      <li>
-        <a href="beverages.html">
-          <span class="icon">🥤</span>
-          <span data-i18n-key="beverages">Beverages</span>
-        </a>
-      </li>
-      <li>
-        <a href="coffee.html">
-          <span class="icon">☕</span>
-          <span data-i18n-key="coffee">Coffee</span>
-        </a>
-      </li>
-      <li>
-        <a href="snacks.html">
-          <span class="icon">🍟</span>
-          <span data-i18n-key="snacks">Snacks</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+    <nav>
+        <ul class="menu">
+            <li>
+                <a href="alcohol.html">
+                    <span class="icon">🍸</span>
+                    <span data-i18n-key="alcohol">Alcohol</span>
+                </a>
+            </li>
+            <li>
+                <a href="beer.html">
+                    <span class="icon">🍺</span>
+                    <span data-i18n-key="beer">Beer</span>
+                </a>
+            </li>
+            <li>
+                <a href="beverages.html">
+                    <span class="icon">🥤</span>
+                    <span data-i18n-key="beverages">Beverages</span>
+                </a>
+            </li>
+            <li>
+                <a href="coffee.html">
+                    <span class="icon">☕</span>
+                    <span data-i18n-key="coffee">Coffee</span>
+                </a>
+            </li>
+            <li>
+                <a href="snacks.html">
+                    <span class="icon">🍟</span>
+                    <span data-i18n-key="snacks">Snacks</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </main>
 
 <footer>
